[Add] Digest mail Template Test.

--- a/custom_digestmail_Layout/views/custom_digestmail_layout.xml
+++ b/custom_digestmail_Layout/views/custom_digestmail_layout.xml
@@ -30,7 +30,7 @@
 
                         <!-- Custom Footer -->
                         <div style="text-align:center; padding:10px; font-size:12px; color:#666;">
-                            <p>Powered by <b>YourCompany</b> | Stay tuned for more updates!</p>
+                            <p>Powered by <b>YourCompany</b> | Stay tuned for more updates and Information!</p>
                         </div>
                     </body>
                 </html>
