--- a/FormFeilds_access/views/res_partner_view.xml
+++ b/FormFeilds_access/views/res_partner_view.xml
@@ -5,34 +5,12 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
 
-            <!-- Configuration section -->
             <xpath expr="//sheet/notebook" position="before">
-                <group string="Field Requirements" col="3">
+                <group string="Field Requirement Rules" col="3">
                     <field name="require_phone"/>
                     <field name="require_email"/>
                     <field name="require_vat"/>
                 </group>
-            </xpath>
-
-            <!-- Phone field -->
-            <xpath expr="//field[@name='phone']" position="attributes">
-                <attribute name="attrs">
-                    {'required': [('require_phone', '=', True)]}
-                </attribute>
-            </xpath>
-
-            <!-- Email field -->
-            <xpath expr="//field[@name='email']" position="attributes">
-                <attribute name="attrs">
-                    {'required': [('require_email', '=', True)]}
-                </attribute>
-            </xpath>
-
-            <!-- VAT field -->
-            <xpath expr="//field[@name='vat']" position="attributes">
-                <attribute name="attrs">
-                    {'required': [('require_vat', '=', True)]}
-                </attribute>
             </xpath>
 
         </field>
