--- a/Contact_missing_info/views/res_partner_dup_report_views.xml
+++ b/Contact_missing_info/views/res_partner_dup_report_views.xml
@@ -7,17 +7,18 @@
         <field name="arch" type="xml">
             <search string="Search Contacts">
 
-                <!-- Has Email -->
+                <!-- Duplicate Emails -->
+                <filter
+                    name="duplicate_email"
+                    string="Duplicate Emails"
+                    domain="[('email', '!=', False)]"
+                    context="{'group_by': 'email'}"/>
+
+                <!-- Optional: Has Email -->
                 <filter
                     name="has_email"
                     string="Has Email"
                     domain="[('email', '!=', False)]"/>
-
-                <!-- Group By -->
-                <filter
-                    name="group_by_email"
-                    string="Group by Email"
-                    context="{'group_by': 'email'}"/>
 
             </search>
         </field>
@@ -28,6 +29,11 @@
     <field name="res_model">res.partner</field>
     <field name="view_mode">list</field>
     <field name="search_view_id" ref="view_partner_search_duplicate_email"/>
+    <field name="context">
+        {
+            'search_default_duplicate_email': 1
+        }
+    </field>
 </record>
 
     <!-- Menu -->
