--- a/Contact_missing_info/views/duplicate_partner_contact_views.xml
+++ b/Contact_missing_info/views/duplicate_partner_contact_views.xml
@@ -18,6 +18,7 @@
         <field name="name">Duplicate Contacts</field>
         <field name="res_model">duplicate.partner.contact</field>
         <field name="view_mode">list</field>
+        <field name="view_id" ref="view_duplicate_partner_contact_list"/>
     </record>
 
     <!-- Menu -->
