--- a/Contact_missing_info/views/duplicate_partner_contact_views.xml
+++ b/Contact_missing_info/views/duplicate_partner_contact_views.xml
@@ -19,5 +19,12 @@
         <field name="res_model">duplicate.partner.contact</field>
         <field name="view_mode">list</field>
     </record>
+        <!-- Menu -->
+    <menuitem
+        id="menu_partner_duplicate_info"
+        name="Contacts duplicate Info"
+        parent="contacts.menu_contacts"
+        action="action_duplicate_partner_contact"
+        sequence="70"/>
 
 </odoo>
