--- a/Contact_missing_info/views/duplicate_partner_contact_views.xml
+++ b/Contact_missing_info/views/duplicate_partner_contact_views.xml
@@ -1,6 +1,8 @@
 <odoo>
 
+    <!-- ============================= -->
     <!-- List View -->
+    <!-- ============================= -->
     <record id="view_duplicate_partner_contact_list" model="ir.ui.view">
         <field name="name">duplicate.partner.contact.list</field>
         <field name="model">duplicate.partner.contact</field>
@@ -13,16 +15,22 @@
         </field>
     </record>
 
-    <!-- Action -->
+    <!-- ============================= -->
+    <!-- Window Action -->
+    <!-- ============================= -->
     <record id="action_duplicate_partner_contact" model="ir.actions.act_window">
         <field name="name">Duplicate Contacts</field>
         <field name="res_model">duplicate.partner.contact</field>
         <field name="view_mode">list</field>
+        <field name="view_id" ref="view_duplicate_partner_contact_list"/>
     </record>
-        <!-- Menu -->
+
+    <!-- ============================= -->
+    <!-- Menu Item -->
+    <!-- ============================= -->
     <menuitem
-        id="menu_partner_duplicate_info"
-        name="Contacts duplicate Info"
+        id="menu_duplicate_partner_contact"
+        name="Duplicate Contacts"
         parent="contacts.menu_contacts"
         action="action_duplicate_partner_contact"
         sequence="70"/>
