--- a/Contact_missing_info/views/duplicate_partner_contact_views.xml
+++ b/Contact_missing_info/views/duplicate_partner_contact_views.xml
@@ -1,38 +1,46 @@
 <odoo>
 
-    <!-- ============================= -->
-    <!-- List View -->
-    <!-- ============================= -->
-    <record id="view_duplicate_partner_contact_list" model="ir.ui.view">
-        <field name="name">duplicate.partner.contact.list</field>
-        <field name="model">duplicate.partner.contact</field>
+    <!-- Search View for Duplicate Email Detection -->
+    <record id="view_partner_search_duplicate_email" model="ir.ui.view">
+        <field name="name">res.partner.search.duplicate.email</field>
+        <field name="model">res.partner</field>
         <field name="arch" type="xml">
-            <list string="Duplicate Contacts (Email &amp; Phone)">
-                <field name="duplicate_type"/>
-                <field name="value"/>
-                <field name="duplicate_count"/>
-            </list>
+            <search string="Search Contacts">
+
+                <!-- Duplicate Emails -->
+                <filter
+                    name="duplicate_email"
+                    string="Duplicate Emails"
+                    domain="[('email', '!=', False)]"
+                    context="{'group_by': 'email'}"/>
+
+                <!-- Optional: Has Email -->
+                <filter
+                    name="has_email"
+                    string="Has Email"
+                    domain="[('email', '!=', False)]"/>
+
+            </search>
         </field>
     </record>
 
-    <!-- ============================= -->
-    <!-- Window Action -->
-    <!-- ============================= -->
-    <record id="action_duplicate_partner_contact" model="ir.actions.act_window">
-        <field name="name">Duplicate Contacts</field>
-        <field name="res_model">duplicate.partner.contact</field>
-        <field name="view_mode">list</field>
-        <field name="view_id" ref="view_duplicate_partner_contact_list"/>
-    </record>
+<record id="action_partner_duplicate_info" model="ir.actions.act_window">
+    <field name="name">Contacts duplicate Info</field>
+    <field name="res_model">res.partner</field>
+    <field name="view_mode">list</field>
+    <field name="search_view_id" ref="view_partner_search_duplicate_email"/>
+    <field name="context">
+        {
+            'search_default_duplicate_email': 1
+        }
+    </field>
+</record>
 
-    <!-- ============================= -->
-    <!-- Menu Item -->
-    <!-- ============================= -->
+    <!-- Menu -->
     <menuitem
-        id="menu_duplicate_partner_contact"
-        name="Duplicate Contacts"
+        id="menu_partner_duplicate_info"
+        name="Contacts duplicate Info"
         parent="contacts.menu_contacts"
-        action="action_duplicate_partner_contact"
+        action="action_partner_duplicate_info"
         sequence="70"/>
-
 </odoo>
